Updated to 0.2.0 Gem of sgbuild, added ci_depedencies cookbook to run .jenkins upon kitchen converge.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -21,7 +21,9 @@ platforms:
 
 suites:
   - name: default
-    run_list: omnibus::default
+    run_list:
+      - omnibus::default
+      - ci_dependencies::default
     attributes:
       omnibus:
         build_user:  vagrant
