--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -10,14 +10,12 @@ provisioner:
   require_chef_omnibus: 11.8.0
 
 platforms:
-  - name: ubuntu-12.04
-    run_list: apt::default
-  - name: ubuntu-11.04
-    run_list: apt::default
-  - name: ubuntu-10.04
-    run_list: apt::default
-  - name: centos-5.10
-  - name: centos-6.5
+- name: centos-6_chef-11
+  driver:
+    box: sendgrid_centos-6_chef-11
+    box_url: http://repo.sjc1.sendgrid.net/images/vagrant/metadata/sendgrid_centos-6_chef-11.json
+    network:
+    - ["forwarded_port", {guest: 80, host: 8080, auto_correct: true}]
 
 suites:
   - name: default
