--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -4,7 +4,7 @@ driver:
     cpus: 2
     memory: 2048
   synced_folders:
-    - ['.', '/home/vagrant/sgbuild']
+    - ['.', '/home/vagrant/sgbuild', type: "nfs"]
 
 provisioner:
   require_chef_omnibus: 11.8.0
